[package]
name = "dtomcat"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
hex = "0.4.3"
log = "0.4.22"
nix = { version = "0.29.0", features = ["process", "signal"] }
redis = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
# following is for icp
ic-agent = "0.38.2"
candid = "0.10.3"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }
chrono = "0.4"
